feat: rewrite the Attribute and CustomAttribute objects and their serialization and deserialization logic